# GITPIP

./: README.md  __init__.py  __main__.py  pyproject.toml
GITPIP/: __init__.py  __main__.py
